[package]
name = "iris_classifier"
version = "0.1.0"
authors = ["koukyo1994 <arabiannight1994@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.10.1", features = ["random", "ndarray"]}
reqwest = {version = "0.10.8", features = ["blocking"]}
ndarray = "0.13"
itertools = "0.9"
